<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00796B"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:padding="25dp">


        <TextView
            android:id="@+id/list_view_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name"
            android:textColor="#ffffff"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/calenderIcon"
            android:layout_width="35dp"
            android:layout_height="45dp"
            android:contentDescription="@string/calender_icon"
            android:tint="#fff"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_view_item_name"
            app:srcCompat="@drawable/ic_baseline_date_range_24px" />

        <TextView
            android:id="@+id/list_view_item_datum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/date"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="@+id/calenderIcon"
            app:layout_constraintLeft_toRightOf="@+id/calenderIcon"
            app:layout_constraintTop_toTopOf="@+id/calenderIcon" />

        <ImageView
            android:id="@+id/alarmIcon"
            android:layout_width="35dp"
            android:layout_height="45dp"
            android:contentDescription="@string/alarm_icon"
            android:tint="#fff"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_view_item_datum"
            app:srcCompat="@drawable/ic_baseline_alarm_on_24px" />

        <TextView
            android:id="@+id/list_view_item_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/days"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="@+id/alarmIcon"
            app:layout_constraintLeft_toRightOf="@+id/alarmIcon"
            app:layout_constraintTop_toTopOf="@+id/alarmIcon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/list_view_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:enabled="true"
            android:text="@string/delete"
            android:textColor="#ffffff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

